# zenhub-to-github-migrator

./: .gitignore  .graphqlrc.yaml  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
queries/github/: add_item.graphql  get_fields.graphql  get_issue_or_pr.graphql  get_project.graphql  set_field_number.graphql  set_field_option.graphql  set_field_value.graphql
queries/zenhub/: get_pipeline_issues.graphql  get_workspace.graphql  get_workspace_issues.graphql
schemas/: zenhub.graphql
src/: github.rs  main.rs  zenhub.rs
