[package]
name = "zenhub-to-github-migrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
# version # must match graphql client's reqwest
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
serde = "1.0.217"
serde_json = "1.0.138"
